# speakeasy-schemas

./: .protolint.yaml  Gemfile  Makefile  README.md  go.mod  go.sum  package-lock.json
grpc/go/registry/embedaccesstoken/: embedaccesstoken.pb.go  embedaccesstoken_grpc.pb.go
grpc/go/registry/ingest/: ingest.pb.go  ingest_grpc.pb.go
grpc/java/: settings.gradle
grpc/java/lib/: build.gradle
grpc/java/lib/src/main/grpc/dev/speakeasyapi/accesstokens/: EmbedAccessTokenServiceGrpc.java
grpc/java/lib/src/main/grpc/dev/speakeasyapi/schemas/: IngestServiceGrpc.java
grpc/java/lib/src/main/java/dev/speakeasyapi/accesstokens/: Embedaccesstoken.java
grpc/java/lib/src/main/java/dev/speakeasyapi/schemas/: Ingest.java
grpc/protos/registry/embedaccesstoken/: embedaccesstoken.proto
grpc/protos/registry/ingest/: ingest.proto
grpc/ruby/: speakeasy_pb-0.0.1.gem  speakeasy_pb.gemspec
grpc/ruby/lib/: speakeasy_pb.rb
grpc/ruby/lib/registry/embedaccesstoken/: embedaccesstoken_pb.rb  embedaccesstoken_services_pb.rb
grpc/ruby/lib/registry/ingest/: ingest_pb.rb  ingest_services_pb.rb
grpc/ruby/lib/speakeasy_pb/: version.rb
grpc/rust/: Cargo.toml  README.md
grpc/rust/generator/: Cargo.toml
grpc/rust/generator/src/: main.rs
grpc/rust/lib/: Cargo.toml
grpc/rust/lib/src/: embedaccesstoken.rs  ingest.rs  lib.rs
grpc/rust/speakeasy-protos-tokio-02/: Cargo.toml  README.md
grpc/rust/speakeasy-protos-tokio-02/src/: embedaccesstoken.rs  ingest.rs  lib.rs
grpc/rust/speakeasy-protos-tokio-latest/: Cargo.toml  README.md
grpc/rust/speakeasy-protos-tokio-latest/src/: embedaccesstoken.rs
grpc/rust/src/: ingest.rs  main.rs
grpc/rust/tokio/: Cargo.toml
grpc/rust/tokio/src/: ingest.rs
grpc/rust/tokio02/: Cargo.toml
grpc/ts/: package-lock.json  package.json
grpc/ts/grpc/: package-lock.json  package.json
grpc/ts/grpc/registry/embedaccesstoken/: embedaccesstoken_grpc_pb.d.ts  embedaccesstoken_grpc_pb.js  embedaccesstoken_pb.d.ts  embedaccesstoken_pb.js
grpc/ts/grpc/registry/ingest/: ingest_grpc_pb.d.ts  ingest_grpc_pb.js  ingest_pb.d.ts  ingest_pb.js
grpc/ts/packagefiles/: package-lock.json  package.json
pkg/apimetadata/: apimetadata.go
pkg/apis/: apis.go
pkg/metrics/: metrics.go
pkg/schemas/: schemas.go
scripts/: generate-protos.sh  prepare-ruby-gem.sh
