[package]
edition = "2021"
name = "generator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tokio = [
  "dep:tonic-build",
]

tokio02 = [
  "dep:tonic-build03",
]

[dependencies]
tonic-build = {version = "0.8", optional = true}
tonic-build03 = {package = "tonic-build", version = "0.3.1", optional = true}
