[package]
edition = "2021"
name = "speakeasy-protos"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## actix 3
# prost = {version = "0.6"}
# tonic = {version = "0.3", features = ["transport", "prost"]}

prost = {version = "0"}
tonic = {version = "0", features = ["transport", "prost"]}
